Adding CourseInfo endpoints (#211)
This PR (https://github.com/KTH/kursinfo-api/pull/211)
* adds new endpoints for CourseInfo
* adds corresponding unit-tests
* adds integration tests that run in the PR pipeline



* feature(KUI-1205): CourseInfoCtrl


* test(KUI-1205): add test for DBWrapper


* fix(KUI-1205): Added Courseinfo endpoint to server and renamed

* feat(KUI-1205): added new fields courseDisposition and supplementaryInfo to courseInfo model

* issue(KUI-1205): implemented get-request for CourseInfoCtrl

* test(KUI-1205): refactored test suite

* fix(KUI-1136): deprecating sellingInfo endpoints

* docs(KUI-1205): updated swagger to reflect endpoints correctly

* cleanup(KUI-1205): cleanup

* docs(KUI-1205): marked courseWebLink endpoint as deprecated

* refactor(KUI-1205)

* issues(KUI-1205): mapping new endpoints

* issues(KUI-1205): TDD session: postCourseInfo Endpoint


* issues(KUI-1205): implemented CourseInfoMapper functions

* feat(KUI-1205): postCourseInfo endpoint implemented

* tests(KUI-1205): unit tests for CourseInfoMappers

* test(KUI-1205): test changes to reflect new object structure + cleanup

* tests(KUI-1205): testing patchCourseInfo endpoint

* test(KUI-1205): testing DBWrapper functions

* fix(KUI-1205): cleanup + patch endpoint registered in server.js

* fix(KUI-1205): typo path/paths


* docs(KUI-1205): correct CourseInfo schema in swagger

* fix(KUI-1205): remove putCourseInfo

* ref(KUI-1205): rename patchCourseInfo|ByCourseCode

* fix(KUI-1205): fix get endpoint, remove unnecessary code


* ref(KUI-1205): replaced deprecated res.send(code, body)


* chore(deps): bump kth-node-express-routing to 2.2.0

Needed for PATCH to work

* fix(KUI-1205): PATCH should take courseCode from path instead of body

If courseCode is passed in body, it should be disregarded.

* feat(KUI-1205): make use of express error handling


* test: fix integration tests

* build(pr):
